# blinklite1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cppxbuildconfig.json
examples/: CMakeLists.txt
examples/connect4/: CMakeLists.txt  main.cpp
examples/connect4/source/: CMakeLists.txt  ConnectGame.cpp  ConnectGame.hpp  ConnectGui.cpp  ConnectGui.hpp  ConnectModel.cpp  CreateTexture.hpp  Grid.hpp
examples/space/: CMakeLists.txt  main.cpp
examples/space/source/: CMakeLists.txt  RandomTexture.hpp  RepeatTexture.hpp  SpaceGame.cpp  SpaceGame.hpp
examples/textureCheck/: CMakeLists.txt  main.cpp
examples/textureCheck/source/: CMakeLists.txt  CheckGame.cpp  CheckGame.hpp
source/: CMakeLists.txt
source/application/: BLApplication.cpp  BLApplication.hpp  BLEvent.hpp  BlinkGame.cpp  BlinkGame.hpp  BlinkMenu.cpp  BlinkMenu.hpp  CMakeLists.txt  FrameLayout.hpp  GameClock.cpp  SDLUserEvents.hpp
source/entities/: AccMovementComponent.cpp  AccMovementComponent.hpp  BLDefs.hpp  CMakeLists.txt  MovementComponent.cpp  MovementComponent.hpp  Node.cpp  Node.hpp  TextureInfo.hpp  Transform2D.hpp
source/grid/: Grid.hpp
source/rendering/: CMakeLists.txt  RenderInfo.cpp  RenderInfo.hpp
source/rendering/rendertools/: BlinkContext.cpp  BlinkContext.hpp  CMakeLists.txt  LayeredRenderer.cpp  LayeredRenderer.hpp
source/rendering/sdlrendering/: BLSDLRenderLayer.cpp  BLSDLRenderLayer.hpp  BLSDLRenderTextureLayer.cpp  BLSDLRenderTextureLayer.hpp  CMakeLists.txt  (+8 more)
source/utilities/: BLDefs.hpp  BLutils.hpp  CMakeLists.txt  SDLPrints.hpp
staging/: CMakeLists.txt  main.cpp
